--- a/package.json
+++ b/package.json
@@ -41,11 +41,15 @@
     "@radix-ui/react-toggle": "^1.1.3",
     "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "@sendgrid/mail": "^8.1.5",
     "@tanstack/react-query": "^5.60.5",
+    "@types/bcryptjs": "^2.4.6",
     "@types/better-sqlite3": "^7.6.13",
     "@types/memoizee": "^0.4.12",
     "@types/mssql": "^9.1.7",
     "@types/multer": "^1.4.13",
+    "@types/nodemailer": "^6.4.17",
+    "bcryptjs": "^3.0.2",
     "better-sqlite3": "^11.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -67,11 +71,13 @@
     "mssql": "^11.0.1",
     "multer": "^2.0.1",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.3",
     "openai": "^5.2.0",
-    "openid-client": "^6.5.1",
+    "openid-client": "^6.6.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pdf-parse": "^1.1.1",
+    "postgres": "^3.4.7",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
