--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/nodemailer": "^6.4.17",
     "bcryptjs": "^3.0.2",
     "better-sqlite3": "^11.10.0",
+    "better-sqlite3-session-store": "^0.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
